proyecto_final_logica_compleja/generated/logicaParser.py
# Generated from logica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class logicaParser ( Parser ):

    grammarFileName = "logica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'void'", "'if'", "'else'", 
                     "'while'", "'break'", "'return'", "'input'", "'print'", 
                     "'true'", "'false'", "'and'", "'nand'", "'or'", "'nor'", 
                     "'not'", "'xor'", "'xnor'", "'!'", "'=='", "'!='", 
                     "'='", "'('", "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOL", "VOID", "IF", "ELSE", "WHILE", 
                      "BREAK", "RETURN", "INPUT", "PRINT", "TRUE", "FALSE", 
                      "AND", "NAND", "OR", "NOR", "NOT", "XOR", "XNOR", 
                      "BANG", "EQ", "NEQ", "ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "SEMI", "COMMA", "ID", "LINE_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_functionDecl = 2
    RULE_paramList = 3
    RULE_param = 4
    RULE_typeSpecifier = 5
    RULE_statement = 6
    RULE_assignment = 7
    RULE_ifStatement = 8
    RULE_whileStatement = 9
    RULE_inputStmt = 10
    RULE_printStmt = 11
    RULE_returnStatement = 12
    RULE_callStmt = 13
    RULE_breakStmt = 14
    RULE_block = 15
    RULE_boolExpr = 16
    RULE_orExpr = 17
    RULE_xorExpr = 18
    RULE_andExpr = 19
    RULE_unaryExpr = 20
    RULE_primary = 21
    RULE_functionCall = 22
    RULE_builtinCall = 23
    RULE_argList = 24

    ruleNames =  [ "program", "declaration", "functionDecl", "paramList", 
                   "param", "typeSpecifier", "statement", "assignment", 
                   "ifStatement", "whileStatement", "inputStmt", "printStmt", 
                   "returnStatement", "callStmt", "breakStmt", "block", 
                   "boolExpr", "orExpr", "xorExpr", "andExpr", "unaryExpr", 
                   "primary", "functionCall", "builtinCall", "argList" ]

    EOF = Token.EOF
    BOOL=1
    VOID=2
    IF=3
    ELSE=4
    WHILE=5
    BREAK=6
    RETURN=7
    INPUT=8
    PRINT=9
    TRUE=10
    FALSE=11
    AND=12
    NAND=13
    OR=14
    NOR=15
    NOT=16
    XOR=17
    XNOR=18
    BANG=19
    EQ=20
    NEQ=21
    ASSIGN=22
    LPAREN=23
    RPAREN=24
    LBRACE=25
    RBRACE=26
    SEMI=27
    COMMA=28
    ID=29
    LINE_COMMENT=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(logicaParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicaParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(logicaParser.FunctionDeclContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicaParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(logicaParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicaParser.StatementContext)
            else:
                return self.getTypedRuleContext(logicaParser.StatementContext,i)


        def getRuleIndex(self):
            return logicaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = logicaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 52
                    self.statement()
                    pass


                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 671089390) != 0)):
                    break

            self.state = 57
            self.match(logicaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(logicaParser.BOOL, 0)

        def ID(self):
            return self.getToken(logicaParser.ID, 0)

        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(logicaParser.ASSIGN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def getRuleIndex(self):
            return logicaParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = logicaParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(logicaParser.BOOL)
            self.state = 60
            self.match(logicaParser.ID)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 61
                self.match(logicaParser.ASSIGN)
                self.state = 62
                self.boolExpr()


            self.state = 65
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(logicaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(logicaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(logicaParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(logicaParser.BlockContext,0)


        def typeSpecifier(self):
            return self.getTypedRuleContext(logicaParser.TypeSpecifierContext,0)


        def VOID(self):
            return self.getToken(logicaParser.VOID, 0)

        def paramList(self):
            return self.getTypedRuleContext(logicaParser.ParamListContext,0)


        def getRuleIndex(self):
            return logicaParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = logicaParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 67
                self.typeSpecifier()
                pass
            elif token in [2]:
                self.state = 68
                self.match(logicaParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 71
            self.match(logicaParser.ID)
            self.state = 72
            self.match(logicaParser.LPAREN)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 73
                self.paramList()


            self.state = 76
            self.match(logicaParser.RPAREN)
            self.state = 77
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicaParser.ParamContext)
            else:
                return self.getTypedRuleContext(logicaParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(logicaParser.COMMA)
            else:
                return self.getToken(logicaParser.COMMA, i)

        def getRuleIndex(self):
            return logicaParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = logicaParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.param()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 80
                self.match(logicaParser.COMMA)
                self.state = 81
                self.param()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(logicaParser.BOOL, 0)

        def ID(self):
            return self.getToken(logicaParser.ID, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = logicaParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(logicaParser.BOOL)
            self.state = 88
            self.match(logicaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(logicaParser.BOOL, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = logicaParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeSpecifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(logicaParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(logicaParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(logicaParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(logicaParser.WhileStatementContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(logicaParser.InputStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(logicaParser.PrintStmtContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(logicaParser.ReturnStatementContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(logicaParser.CallStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(logicaParser.BreakStmtContext,0)


        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def declaration(self):
            return self.getTypedRuleContext(logicaParser.DeclarationContext,0)


        def getRuleIndex(self):
            return logicaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = logicaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.inputStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.printStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 98
                self.callStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 99
                self.breakStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 100
                self.match(logicaParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 101
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(logicaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(logicaParser.ASSIGN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = logicaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(logicaParser.ID)
            self.state = 105
            self.match(logicaParser.ASSIGN)
            self.state = 106
            self.boolExpr()
            self.state = 107
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(logicaParser.IF, 0)

        def LPAREN(self):
            return self.getToken(logicaParser.LPAREN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def RPAREN(self):
            return self.getToken(logicaParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicaParser.BlockContext)
            else:
                return self.getTypedRuleContext(logicaParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(logicaParser.ELSE, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = logicaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(logicaParser.IF)
            self.state = 110
            self.match(logicaParser.LPAREN)
            self.state = 111
            self.boolExpr()
            self.state = 112
            self.match(logicaParser.RPAREN)
            self.state = 113
            self.block()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 114
                self.match(logicaParser.ELSE)
                self.state = 115
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(logicaParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(logicaParser.LPAREN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def RPAREN(self):
            return self.getToken(logicaParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(logicaParser.BlockContext,0)


        def getRuleIndex(self):
            return logicaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = logicaParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(logicaParser.WHILE)
            self.state = 119
            self.match(logicaParser.LPAREN)
            self.state = 120
            self.boolExpr()
            self.state = 121
            self.match(logicaParser.RPAREN)
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(logicaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(logicaParser.ASSIGN, 0)

        def INPUT(self):
            return self.getToken(logicaParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(logicaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(logicaParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStmt" ):
                return visitor.visitInputStmt(self)
            else:
                return visitor.visitChildren(self)




    def inputStmt(self):

        localctx = logicaParser.InputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(logicaParser.ID)
            self.state = 125
            self.match(logicaParser.ASSIGN)
            self.state = 126
            self.match(logicaParser.INPUT)
            self.state = 127
            self.match(logicaParser.LPAREN)
            self.state = 128
            self.match(logicaParser.RPAREN)
            self.state = 129
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(logicaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(logicaParser.LPAREN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def RPAREN(self):
            return self.getToken(logicaParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = logicaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(logicaParser.PRINT)
            self.state = 132
            self.match(logicaParser.LPAREN)
            self.state = 133
            self.boolExpr()
            self.state = 134
            self.match(logicaParser.RPAREN)
            self.state = 135
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(logicaParser.RETURN, 0)

        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(logicaParser.BoolExprContext,0)


        def getRuleIndex(self):
            return logicaParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = logicaParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(logicaParser.RETURN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 546155520) != 0):
                self.state = 138
                self.boolExpr()


            self.state = 141
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self):
            return self.getTypedRuleContext(logicaParser.FunctionCallContext,0)


        def SEMI(self):
            return self.getToken(logicaParser.SEMI, 0)

        def getRuleIndex(self):
            return logicaParser.RULE_callStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallStmt" ):
                listener.enterCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallStmt" ):
                listener.exitCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallStmt" ):
                return visitor.visitCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def callStmt(self):

        localctx = logicaParser.CallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_callStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.functionCall()
            self.state = 144
            self.match(logicaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
